# Meoxwater

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  start.sh
config/: anti_recall.json
src/developing/wife_today/: __init__.py  utils.py  wife_management.py
src/plugins/: __init__.py
src/plugins/anti_recall/: AntiRecall.py  MsgManager.py  __init__.py
src/plugins/basic/: __init__.py  config.py
src/plugins/caramel_cup/: __init__.py  database.py
src/plugins/custom_quotes/: README.md  __init__.py  config.py
src/plugins/fun/: __init__.py
src/plugins/homework/: __init__.py
src/plugins/homo_number/: __init__.py
src/plugins/nonebot_plugin_today_waifu/: __init__.py
src/plugins/rotaeno/: __init__.py
src/plugins/wife_today/: utils.py
