[project]
name = "triox-bot"
version = "0.1.0"
description = "triox-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "mirai2", module_name = "nonebot.adapters.mirai2" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "Console", module_name = "nonebot.adapters.console" },
    { name = "Minecraft", module_name = "nonebot.adapters.minecraft" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
    { name = "Mirai", module_name = "nonebot.adapters.mirai"}
]
plugins = ["nonebot_plugin_batitle"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
